# Playable_Bosses

./: Cargo.toml  README.md
future_moves/: assault_loop_coroutine.txt  assault_loop_status.txt  assault_start_coroutine.txt  sky_slip_coroutine.txt  sky_slip_end2_coroutine.txt  sky_slip_end2_status.txt  sky_slip_end_coroutine.txt  sky_slip_end_status.txt  sky_slip_status.txt  step_air_coroutine.txt  turn_air_coroutine.txt  turn_coroutine.txt
src/: func.txt  jump_land.txt  lariat.txt  lariat_charge.txt  lib.rs  man_to_tank_rush.txt  man_to_tank_shoot.txt  shoot.txt  tank_finish_end.txt  tank_finish_start.txt  tank_loop.txt  tank_return.txt  tank_return_loop.txt  tank_rush.txt  tank_rush_loop.txt  tank_to_man_shoot.txt  turn.txt
src/common/: check_boss.rs  hooks.rs  manage_mario.rs  mod.rs  modules.rs  opff.rs  params.rs  summon_boss.rs
src/crazyhand/: air_specials.rs  entry_wait_dead.rs  ground_specials.rs  mod.rs  move_input.rs  normals.rs  skin_manager.rs  status_setting.rs  super_specials.rs  teleport_turn.rs  weapons.rs
src/darz/: entry_wait_dead.rs  hooks.rs  mod.rs  move_input.rs  normals.rs  specials.rs  status_setting.rs  teleport.rs
src/dracula/: entry_wait_dead.rs  mod.rs  move_input.rs  normals.rs  specials.rs  status_setting.rs  teleport.rs
src/dracula2/: entry_wait_dead.rs  mod.rs  move_input.rs  normals.rs  specials.rs  status_setting.rs  turn_specials.rs
src/galleom/: entry_wait_dead.rs  mod.rs  move_input.rs  movement.rs  normals.rs  specials.rs  status_setting.rs  turn.rs
src/ganonboss/: entry_wait_dead.rs  fs_playable.rs  mod.rs  normals.rs  (+5 more)
(+42 files in other folders)
